# worm

./: index.html  params.json
src/: CMakeLists.txt  README  completeWorm.txt  helper.c  helper.h  main.c  worm.c  worms.h
src/cmake_modules/: Findncurses.cmake
